<resources>
    <string name="app_name">P2PChat</string>
    <string name="Open"> NavBar</string>
    <string name="Close"> NavBar</string>
    <string name="historyButtonTitle">Conversations</string>
    <string name="chatButtonTitle">Chat</string>
    <string name="cancelButtonTitle">Stop</string>
    <string name="clearHistoryButtonTitle">Clear history</string>
    <string name="emptyHistoryMessage">No conversation found</string>
    <string name="loading_connection">Searching active users…</string>
    <string name="title_activity_chat">Chat activity</string>
    <string name="historyPageTitle">Conversations</string>
    <string name="enter_message">Enter the text</string>
    <string name="connect">Connect</string>
    <string name="name">Name</string>
    <string name="start_date">Start Date</string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="set_background">Set Background</string>
</resources>
