<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".view.ChatActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/loading_connection"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/stopSearch"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:text="@string/cancelButtonTitle"
            android:textColor="@android:color/white"
            android:background="@drawable/stop_background"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/messengerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reyclerview_message_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/layout_chatbox"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/checkOnline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:text="You cannot chat until the device is connected!"
            app:layout_constraintBottom_toBottomOf="@id/messengerLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:visibility="invisible"
            app:layout_constraintRight_toRightOf="parent"/>

        <LinearLayout
            android:id="@+id/layout_chatbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@id/messengerLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <EditText
                android:id="@+id/edittext_chatbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/chatbox_backgrouond"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="@string/enter_message"
                android:maxLines="6" />

            <ImageButton
                android:id="@+id/button_chatbox_send"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_send_24dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:textSize="18sp" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>